--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@
   grid-column-end: 2;
   grid-row-start: 2;
   grid-row-end: 3;
+  padding: 2rem;
 }
 
 .body-right-section {
@@ -27,6 +28,7 @@
   grid-column-end: 3;
   grid-row-start: 2;
   grid-row-end: 3;
+  padding: 2rem;
 }
 
 .footer {
