add css reset file and moar styling, plz

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,10 @@
+@import url('reset.css');
+
 .container {
   display: grid;
   grid-template-columns: 500px 500px;
   justify-content: center;
+  padding-top: 0px;
 }
 
 .header {
@@ -38,4 +41,21 @@
   grid-row-start: 3;
   grid-row-end: 4;
   text-align: center;
+}
+
+h1, h2 {
+  font-weight: 700;
+  padding: 20px 0px;
+}
+
+h1 {
+  font-size: 40px;
+}
+
+h2 {
+  font-size: 30px;
+}
+
+p {
+  font-size: 24px;
 }
