--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,12 @@
 
 .container {
   display: grid;
-  grid-template-columns: 500px 500px;
-  justify-content: center;
+  justify-content: stretch;
   padding-top: 0px;
+}
+
+.header, .footer {
+  text-align: center;
 }
 
 .header {
@@ -13,7 +16,6 @@
   grid-column-end: 3;
   grid-row-start: 1;
   grid-row-end: 2;
-  text-align: center;
 }
 
 .body-left-section {
@@ -40,7 +42,6 @@
   grid-column-end: 3;
   grid-row-start: 3;
   grid-row-end: 4;
-  text-align: center;
 }
 
 h1, h2 {
